crates/nash-parse/src/expression/snapshots/nash_parse__expression__record__tests__update_single.snap
---
source: crates/nash-parse/src/expression/record.rs
description: "Code:\n\n{ model | count = 5 }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 22,
        },
    },
    value: Update {
        record: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 3,
                },
                end: Position {
                    line: 1,
                    column: 8,
                },
            },
            value: "model",
        },
        fields: [
            FieldAssign {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 11,
                        },
                        end: Position {
                            line: 1,
                            column: 16,
                        },
                    },
                    value: "count",
                },
                value: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 19,
                        },
                        end: Position {
                            line: 1,
                            column: 20,
                        },
                    },
                    value: Int(
                        5,
                    ),
                },
            },
        ],
    },
}
